[package]
name = "repak"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_ast = { version = "0.29.0", features = ["transpiling"] }
deno_core = "0.208.0"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
deno_core = "0.208.0"
